--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath("net.serenity-bdd:serenity-gradle-plugin:2.3.2")
+        classpath("net.serenity-bdd:serenity-gradle-plugin:2.4.24")
     }
 }
 
@@ -18,15 +18,13 @@ apply plugin: 'eclipse'
 apply plugin: 'idea'
 apply plugin: 'net.serenity-bdd.aggregator'
 
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
 
 dependencies {
-    compile 'net.serenity-bdd:serenity-core:2.3.2'
-    compile 'net.serenity-bdd:serenity-junit:2.3.2'
-    compile 'net.serenity-bdd:serenity-screenplay:2.3.2'
-    compile 'net.serenity-bdd:serenity-screenplay-webdriver:2.3.2'
-    testCompile('junit:junit:4.12')
+    implementation 'net.serenity-bdd:serenity-core:3.5.1'
+    implementation 'net.serenity-bdd:serenity-junit:3.5.1'
+    implementation 'net.serenity-bdd:serenity-screenplay:3.5.1'
+    implementation 'net.serenity-bdd:serenity-screenplay-webdriver:3.5.1'
+    testImplementation 'junit:junit:4.13.2'
 }
 gradle.startParameter.continueOnFailure = true
 
